--- a/ProjectWorkSpace/DashboardEAR/.settings/org.eclipse.wst.common.component
+++ b/ProjectWorkSpace/DashboardEAR/.settings/org.eclipse.wst.common.component
@@ -11,7 +11,7 @@
         <dependent-module archiveName="DashboardData.jar" deploy-path="/lib" handle="module:/resource/DashboardData/DashboardData">
             <dependency-type>uses</dependency-type>
         </dependent-module>
-        <dependent-module archiveName="TestWebservice.war" deploy-path="/" handle="module:/resource/TestWebservice/TestWebservice">
+        <dependent-module archiveName="PassiveDisplayWebservice.war" deploy-path="/" handle="module:/resource/PassiveDisplayWebservice/PassiveDisplayWebservice">
             <dependent-object/>
             <dependency-type>uses</dependency-type>
         </dependent-module>
