--- a/ProjectWorkSpace/DashboardEAR/.settings/org.eclipse.wst.common.component
+++ b/ProjectWorkSpace/DashboardEAR/.settings/org.eclipse.wst.common.component
@@ -1,10 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
     <wb-module deploy-name="DashboardEAR">
         <wb-resource deploy-path="/" source-path="/EarContent" tag="defaultRootSource"/>
-        <dependent-module archiveName="WebApp.war" deploy-path="/" handle="module:/resource/WebApp/WebApp">
-            <dependent-object/>
-            <dependency-type>uses</dependency-type>
-        </dependent-module>
         <dependent-module archiveName="DashboardUtils.jar" deploy-path="/lib" handle="module:/resource/DashboardUtils/DashboardUtils">
             <dependency-type>uses</dependency-type>
         </dependent-module>
@@ -12,6 +8,10 @@
             <dependency-type>uses</dependency-type>
         </dependent-module>
         <dependent-module archiveName="PassiveDisplayWebservice.war" deploy-path="/" handle="module:/resource/PassiveDisplayWebservice/PassiveDisplayWebservice">
+            <dependent-object/>
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="BAProblems.war" deploy-path="/" handle="module:/resource/BAProblems/BAProblems">
             <dependent-object/>
             <dependency-type>uses</dependency-type>
         </dependent-module>
