--- a/ProjectWorkSpace/BAProblems/WebContent/styles.css
+++ b/ProjectWorkSpace/BAProblems/WebContent/styles.css
@@ -92,6 +92,11 @@ table td:last-child
     border-right: none;
     }
 
+tr:nth-child(even) 
+	{
+    background-color: lavender;
+	}
+
 #selectedProblemDisplay
     {
     margin: 10px 0px 10px 0px;
@@ -161,6 +166,13 @@ table td:last-child
 	padding: 5px 10px 5px 10px;
 	margin-top: 10px;
 	}
+
+table tr.selectedRow
+	{
+	background-color:darkgray;
+	color: white;
+	}
+
 /* ng-cloak */
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng.ng-cloak {
     display: none !important;
