--- a/ProjectWorkSpace/DashboardEAR/.settings/org.eclipse.wst.common.component
+++ b/ProjectWorkSpace/DashboardEAR/.settings/org.eclipse.wst.common.component
@@ -15,5 +15,8 @@
             <dependent-object/>
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="JSONGenerator.jar" deploy-path="/lib" handle="module:/resource/JSONGenerator/JSONGenerator">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
     </wb-module>
 </project-modules>
